--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -11,8 +11,14 @@
     html, body {
         @apply h-full;
         @apply select-none;
-        @apply bg-transparent;
-        @apply font-mono antialiased text-white;
+        @apply font-mono antialiased; 
         @apply overflow-hidden;
+
+        
     }
+}
+
+.app {
+    @apply bg-gradient-to-tr from-slate-800 to-slate-900 text-white;
+
 }
