--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -18,7 +18,18 @@
     }
 }
 
-.app {
+.app-dark-layout {
     @apply bg-gradient-to-tr from-slate-800 to-slate-900 text-white;
+    @apply h-full;
+    @apply flex;
+    @apply justify-center;
+    @apply items-center;
 
+}
+
+.app-light-layout {
+    @apply bg-white text-black;
+    @apply h-full;
+    @apply flex;
+    @apply items-center;
 }
